Bug 610727 - Mark canvas layers inactive when relevant. r=roc a=blocking-fennec